fix: Remove unused params [DHIS2-1604]